clusters/server/base/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: server
